# logkonsult

./: .gitignore  LICENSE  README.md  pyproject.toml
logkonsult/: __init__.py  __main__.py  application.py  main.py
logkonsult/model/: alpm.py  alpmfilters.py  alpmtransform.py  config.py  delegates.py  pacnew.py  store.py
logkonsult/ui/: application.py  widgets.py
pkg/: .install  PKGBUILD  PKGBUILD.git  logkonsult.desktop
